--- a/style.css
+++ b/style.css
@@ -161,3 +161,12 @@ h1 {
         margin-top: 5vh;
     }
 }
+
+@media screen and (min-width : 750px) and (max-width : 1024px) {
+    .container_1{
+        display: none;
+    }
+    .container_3{
+        display: none;
+    }
+}
